..F....... [ZBX-15801] fixed name of upper level map in breadcrumbs is wrapped to the next line
git-svn-id: svn://svn.zabbix.com/branches/dev@91381 f4e7fd02-d210-4e34-a1e0-d4093fb66cc2

--- a/ZBX-15801/frontends/php/styles/blue-theme.css
+++ b/ZBX-15801/frontends/php/styles/blue-theme.css
@@ -491,11 +491,10 @@ article, main {
         max-width: 200px;
         overflow: hidden;
         text-overflow: ellipsis;
-        vertical-align: top; }
+        vertical-align: top;
+        white-space: nowrap; }
   .filter-breadcrumb > li {
     padding: 1px 0; }
-  .filter-breadcrumb > li:first-child {
-    white-space: nowrap; }
   .filter-breadcrumb + .filter-space {
     margin-top: -29px; }
 
